# suicide

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yml  test.yml
src/: main.rs
src/install/: mod.rs
src/show/: mod.rs
src/utils/: download.rs  grace.rs  mod.rs
