[package]
name = "suicide"
version = "0.1.0"
edition = "2021"

[dependencies]
# Helper tools
log = "0.4.17"
rand = "0.8.5"

# Working with files & directories
zip = "0.6.2"
dirs = "4.0.0"

# Creating CLI intrface
owo-colors = "3.5.0"
clap = { version = "3.2.19", features = ["derive"] }

# Serialize and Deserialize things
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Downloading things
tempfile = "3.3.0"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
